--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-epub-viewer",
   "version": "0.1.3",
+  "homepage" : "https://GaurangGhadiya.github.io/epub",
   "author": {
     "name": "NB",
     "email": "altmshfkgudtjr@naver.com"
@@ -18,7 +19,7 @@
     "lib",
     "README.md"
   ],
-  "homepage": "https://altmshfkgudtjr.github.io/react-epub-viewer",
+
   "repository": {
     "type": "git",
     "url": "https://github.com/altmshfkgudtjr/react-epub-viewer"
@@ -28,12 +29,13 @@
     "email": "altmshfkgudtjr@naver.com"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "prebuild": "react-scripts test --watchAll=false --passWithNoTests",
     "build": " react-scripts build",
     "test": "react-scripts test",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
+   
     "clean": "rimraf lib",
     "precompile": "react-scripts test --watchAll=false --passWithNoTests && yarn clean",
     "compile": "babel src --out-dir lib --extensions .ts,.tsx",
